Changed the logo

--- a/Quadridge/Views/Clients/Details.cshtml
+++ b/Quadridge/Views/Clients/Details.cshtml
@@ -16,7 +16,7 @@
     <li>First Address Line: </li>
     @if( Model.SecondAddressLine != null)
     {
-< li > Second Address Line: </ LinkedList >
+    <li> Second Address Line: </li>
     }
     <li>Suburb: </li>
     <li>City: </li>
