Added the function to save deals

--- a/Quadridge/Views/Clients/Index.cshtml
+++ b/Quadridge/Views/Clients/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Clients</h2>
-
+<p>
+    @Html.ActionLink("New Client", "New", "Clients", null, new { @class = "btn btn-primary" })
+</p>
 @if (!Model.Any())
 {
     <p>We don't have any clients yet.</p>
