--- a/Quadridge/Views/Clients/Index.cshtml
+++ b/Quadridge/Views/Clients/Index.cshtml
@@ -20,7 +20,7 @@ else
                 <th>Name</th>
                 <th>Surname</th>
                 <th>Company</th>
-                <th>Delete</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -34,7 +34,7 @@ else
                         <td>@client.Company.Name</td>
                     }
                     <td>
-                        <button data-client-id="@client.ClientId" class="btn-link js-delete">Delete</button>
+                        <button data-client-id="@client.ClientId" class="btn-link js-delete">Delete</button> | @Html.ActionLink("Edit", "Edit", "Clients", new { id = client.ClientId }, null)
                     </td>
 
                 </tr>
@@ -47,24 +47,22 @@ else
 {
     <script>
         $(document).ready(function () {
-            $("#clients").DataTable();
-
-
-            $("#clients").on("click", ".js-delete", function () {
+            $("#clients .js-delete").on("click", function () {
                 var button = $(this);
-                bootbox.confirm("Are you sure you wan to delete this client?", function (result) {
+                bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
                     if (result) {
                         $.ajax({
                             url: "/api/clients/" + button.attr("data-client-id"),
                             method: "DELETE",
                             success: function () {
-                                // console.log("Success");
+                                //console.log("Success");
                                 button.parents("tr").remove();
-                            } // bootbox if
-                        }); // ajax
+                            }
+
+                        }); //ajax
                     }
-                }); //bootbox
-            }); //click function
-        }); // ready function
+                });
+            }); //on click
+        }); //document.ready
     </script>
 }
