--- a/Quadridge/Views/Shared/_Layout.cshtml
+++ b/Quadridge/Views/Shared/_Layout.cshtml
@@ -34,12 +34,12 @@
         @RenderBody()
         <hr />
     </div>
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Quadridge</p>
-        </footer>
-    
+    <footer>
+        <p>&copy; @DateTime.Now.Year - Quadridge</p>
+    </footer>
 
-    @Scripts.Render("~/bundles/lib")
+
+    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
